@startuml classes
set namespaceSeparator none
class "Board" as Stove.Board {
  b1 : NoneType
  b2 : NoneType
  b3 : NoneType
  b4 : NoneType
  b5 : NoneType
  get()
}
class "Cards" as Stove.Cards {
  c1
  c2
  get()
}
class "EV" as Stove.EV {
  n_hands
  n_losses
  n_ties
  n_wins
}
class "Range" as Stove.Range {
  add(hand)
  expand(hands)
  get()
}
class "Stove" as Stove.Stove {
  board : NoneType
  h_range : NoneType
  hand : NoneType
  set_board_string(string)
  set_board_with_list(board)
  set_hero_cards_string(string)
  set_villain_range_string(string)
}
class "SumEV" as Stove.SumEV {
  n_hands : int
  n_losses : int
  n_ties : int
  n_wins : int
  output : str
  add(ev)
  show(hand, h_range)
}
Stove.Board --* Stove.Stove : board
Stove.Cards --* Stove.Stove : hand
Stove.Range --* Stove.Stove : h_range
@enduml
